--- a/2.1-databases/models_list_displaying/templates/books/books_list.html
+++ b/2.1-databases/models_list_displaying/templates/books/books_list.html
@@ -7,17 +7,15 @@
         <div class="header">
             <h1><a href="/books">Каталог</a></h1>
         </div>
+        {% for book in books %}
         <div class="row">
             <div class="book col-md-4">
-                <h2>Сияние</h2>
-                <p>Автор: Стивен Кинг</p>
-                <p>Дата публикации: 2018-09-10</p>
+                <h2><a href="books">{{ book.pub_date }}</a></h2>
+                    <p>{{ book.author }}</p>
+                    <p>{{ book.name }}</p>
             </div>
-            <div class="book col-md-4">
-                <h2>1984</h2>
-                <p>Автор: Джордж Оруэл</p>
-                <p>Дата публикации: 2015-03-11</p>
-            </div>
+
         </div>
+        {% endfor %}
     </div>
 {% endblock %}
